[gd_scene load_steps=7 format=3 uid="uid://h7i8j9k0l1m2n3"]

[ext_resource type="Script" path="res://Assets/Script/SCR_LifeComponent.gd" id="1_life"]
[ext_resource type="Script" path="res://Assets/Script/SCR_BaseNeutre_init.gd" id="2_script"]
[ext_resource type="PackedScene" uid="uid://8p3gyrp0h5vb" path="res://Composants/CMP_creatureMaterial.tscn" id="3_material"]
[ext_resource type="PackedScene" uid="uid://tv7vmgbh1wm7" path="res://Composants/CMP_CreatureSpawner.tscn" id="4_spawner"]
[ext_resource type="PackedScene" uid="uid://e8f9g6h5i4j3k2" path="res://Entit√©es/ENT_ScoutCerf.tscn" id="5_scout_cerf"]
[ext_resource type="PackedScene" uid="uid://f8g7h6i5j4k3l2" path="res://Entit√©es/ENT_GardeSanglier.tscn" id="6_garde_sanglier"]

[node name="ENT_BaseNeutre" type="Node2D"]
script = ExtResource("2_script")

[node name="CMP_vie" type="Node" parent="."]
script = ExtResource("1_life")
Max_life = 75

[node name="StructurePrincipale" type="Line2D" parent="."]
position = Vector2(0, 0)
scale = Vector2(2.0, 2.0)
points = PackedVector2Array(-60, -40, 60, -40, 60, 40, -60, 40, -60, -40)
width = 6.0
default_color = Color(0.6, 0.5, 0.4, 1)

[node name="ToitTriangulaire" type="Line2D" parent="."]
position = Vector2(0, -80)
scale = Vector2(2.0, 2.0)
points = PackedVector2Array(-70, 0, 0, -25, 70, 0, -70, 0)
width = 5.0
default_color = Color(0.4, 0.3, 0.2, 1)

[node name="TourGauche" type="Line2D" parent="."]
position = Vector2(-80, -40)
scale = Vector2(1.5, 1.5)
points = PackedVector2Array(-15, -20, 15, -20, 15, 60, -15, 60, -15, -20)
width = 4.0
default_color = Color(0.5, 0.4, 0.3, 1)

[node name="TourDroite" type="Line2D" parent="."]
position = Vector2(80, -40)
scale = Vector2(1.5, 1.5)
points = PackedVector2Array(-15, -20, 15, -20, 15, 60, -15, 60, -15, -20)
width = 4.0
default_color = Color(0.5, 0.4, 0.3, 1)

[node name="Portail" type="Line2D" parent="."]
position = Vector2(0, 80)
scale = Vector2(1.8, 1.8)
points = PackedVector2Array(-25, 0, -25, -30, 25, -30, 25, 0)
width = 4.0
default_color = Color(0.3, 0.5, 0.2, 1)

[node name="DrapeauNeutre" type="Line2D" parent="."]
position = Vector2(0, -130)
scale = Vector2(1.0, 1.0)
points = PackedVector2Array(0, 0, 0, 30, 20, 25, 20, 10, 0, 15)
width = 3.0
default_color = Color(0.8, 0.7, 0.5, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-120, -80, 120, -80, 120, 80, 50, 80, 50, 144, -50, 144, -50, 80, -120, 80)

[node name="CMP_CreatureMaterial" parent="." instance=ExtResource("3_material")]
z_index = 10
position = Vector2(-40, -40)
autoharvest_wait = 2.0

[node name="SpawnerScoutCerf" parent="." instance=ExtResource("4_spawner")]
position = Vector2(0, 0)
creatureCost = 3
spawnedCreature = ExtResource("5_scout_cerf")
isEnnemy = false
automation = true
automationTime = 15.0

[node name="LabelScoutCerf" type="Label" parent="SpawnerScoutCerf"]
offset_left = -60.0
offset_top = -25.0
offset_right = 60.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.8, 0.6, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "ü¶å Garde-√âclaireur (3)"
horizontal_alignment = 1

[node name="ColorIndicatorScout" type="ColorRect" parent="SpawnerScoutCerf"]
offset_left = -30.0
offset_top = -8.0
offset_right = 30.0
offset_bottom = 2.0
color = Color(0.8, 0.6, 0.4, 0.4)

[node name="LabelBase" type="Label" parent="."]
offset_left = -70.0
offset_top = -110.0
offset_right = 70.0
offset_bottom = -95.0
theme_override_colors/font_color = Color(0.6, 0.5, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "üèõÔ∏è AVANT-POSTE NEUTRE"
horizontal_alignment = 1

[node name="LabelFaction" type="Label" parent="."]
offset_left = -80.0
offset_top = 90.0
offset_right = 80.0
offset_bottom = 105.0
theme_override_colors/font_color = Color(0.5, 0.4, 0.3, 0.8)
theme_override_font_sizes/font_size = 12
text = "‚öñÔ∏è Territoire des Serviteurs"
horizontal_alignment = 1

[node name="PotencesDeBois" type="Line2D" parent="."]
position = Vector2(-100, 20)
points = PackedVector2Array(0, 0, 0, 40, 20, 40)
width = 3.0
default_color = Color(0.4, 0.3, 0.2, 0.8)

[node name="PotencesDeBois2" type="Line2D" parent="."]
position = Vector2(100, 20)
points = PackedVector2Array(0, 0, 0, 40, -20, 40)
width = 3.0
default_color = Color(0.4, 0.3, 0.2, 0.8)

[node name="TimerPatrouille" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="ZoneInfluence" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="InfluenceShape" type="CollisionShape2D" parent="ZoneInfluence"]

[node name="ParticulesFumee" type="CPUParticles2D" parent="."]
position = Vector2(-20, -60)
emitting = true
amount = 15
lifetime = 3.0
emission_rate = 5.0
speed_scale = 0.8
direction = Vector2(0, -1)
spread = 15.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
gravity = Vector2(0, -25)
scale_amount_min = 0.3
scale_amount_max = 0.8
color = Color(0.6, 0.5, 0.4, 0.4)

[node name="SpawnerGardeSanglier" parent="." instance=ExtResource("4_spawner")]
position = Vector2(60, 40)
creatureCost = 5
spawnedCreature = ExtResource("6_garde_sanglier")
isEnnemy = false
automation = true
automationTime = 20.0

[node name="LabelGardeSanglier" type="Label" parent="SpawnerGardeSanglier"]
offset_left = -60.0
offset_top = -25.0
offset_right = 60.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.4, 0.3, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "üêó Garde-Sanglier (5)"
horizontal_alignment = 1

[node name="ColorIndicatorGarde" type="ColorRect" parent="SpawnerGardeSanglier"]
offset_left = -30.0
offset_top = -8.0
offset_right = 30.0
offset_bottom = 2.0
color = Color(0.4, 0.3, 0.2, 0.4) 